# KinectCam

./: CMakeLists.txt  Dll.cpp  KinectCam.cpp  KinectCam.def  KinectCam.h  README.md
.github/workflows/: build.yml  cmake.yml
cmake/: FindDirectShow.cmake  FindKinect.cmake  FindWindowsSDK.cmake
